--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ABK01_06Debugging</string>
+    <string name="halo_proses_debug">Halo, proses debug</string>
 </resources>
