--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">ABK1_04Debugging</string>
+    <string name="app_name">GD1_01Debugging</string>
     <string name="halo_proses_debug">Halo, proses debug</string>
 </resources>
